update and improve docs

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="popupBody">
+<body class="popupBody bodyCommon">
 
   <div style="margin: 10px;">
     <div>VRChat Feedback Boards Helper Browser Extension</div>
@@ -39,14 +39,14 @@
         </li>
         <li>
           <label>
-            <input type="checkbox" name="isCreatedDate">
-            Show post created date
+            <input type="checkbox" name="isShowAuthorName">
+            Show author name of each post
           </label>
         </li>
         <li>
           <label>
-            <input type="checkbox" name="isShowAuthorName">
-            Show author name of each post
+            <input type="checkbox" name="isCreatedDate">
+            Show the date each post is created 
           </label>
         </li>
         <li>
