--- a/browser-extension/options.html
+++ b/browser-extension/options.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Options | VRChat feedback boards helper browser extension</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="background-color: dimgray; color: moccasin;">
+<body class="bodyCommon">
 
   <div style="margin: 10px;">
     <div>VRChat feedback boards helper browser extension</div>
 
     <h3>Options</h3>
-    Nothing here yet.
+    <p>Nothing here yet.
+
+    <h3 id="help">Help</h3>
+    <h4>How to change settings</h4>
+    <ul>
+      <li>Show popup and configure (Same manner as other extensions. See below for details)</li>
+      <li>Settings will be applied immediately on browsing page.</li>
+      <li>Currently you can't save settings. It sustains while the session only. (That is until you close the tab.)</li>
+    </ul>
+    
+    <h4>How to show popup</h4>
+    <ol>
+      <li> While browsing VRChat feedback board (that is Canny)</li>
+      <li> Click Chrome extensions button on toolbar.
+        (Like a jigsaw puzzle piece icon on right upper of the window)</li>
+      <li> Choose this extension</li>
+      <li> Then a popup will appears.</li>
+      <li> Tips: You can pin the icon on the toolbar for a short cut</li>
+    </ol>
+
+
+    <div style="margin-top: 50px;">
+      written by
+      <a href="https://twitter.com/naqtn" target="_blank">naqtn</a>
+      , repo on <a href="https://github.com/naqtn/vrchat-feedback-boards-helper">GitHub</a>
+      , under the MIT License
+    </div>
 
     <div id="testUI" style="display: none;">
       <button id="testButton">test</button>
