cleanup (rename identifiers)

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -27,37 +27,37 @@
       <ul class="simpleList" style="padding-left: 10px;">
         <li>
           <label>
-            <input type="checkbox" name="isMarkMyPosts">
+            <input type="checkbox" name="markMyPosts">
             Mark my posts
           </label>
         </li>
         <li>
           <label>
-            <input type="checkbox" name="isHideOthersPosts">
+            <input type="checkbox" name="hideOtherUsersPosts">
             Hide other people's posts
           </label>
         </li>
         <li>
           <label>
-            <input type="checkbox" name="isShowAuthorName">
+            <input type="checkbox" name="showAuthorName">
             Show author name of each post
           </label>
         </li>
         <li>
           <label>
-            <input type="checkbox" name="isCreatedDate">
+            <input type="checkbox" name="showCreatedDate">
             Show the date each post is created 
           </label>
         </li>
         <li>
           <label>
-            <input type="checkbox" name="isFilterByAuthorNames">
+            <input type="checkbox" name="filterByAuthorNames">
             Filter by author names
           </label>
         </li>
         <li>
           <label>
-            <input type="checkbox" name="isMarkPostsByAuthorNames">
+            <input type="checkbox" name="markPostsByAuthorNames">
             Mark posts by author names
           </label>
         </li>
