replace main icon file
Using materials from [Jam icons](https://jam-icons.com/) licensed under MIT

--- a/browser-extension/options.html
+++ b/browser-extension/options.html
@@ -9,7 +9,10 @@
 <body class="bodyCommon">
 
   <div style="margin: 10px;">
-    <div>VRChat feedback boards helper browser extension</div>
+    <div>
+      <h2 style="display: inline-block;">VRChat feedback boards helper browser extension</h2>
+      <img src="/images/icon1_128.png" style="width:128px; height:128px; zoom: 25%;">
+    </div>
 
     <h3>Options</h3>
     <p>Nothing here yet.
@@ -21,7 +24,7 @@
       <li>Settings will be applied immediately on browsing page.</li>
       <li>Currently you can't save settings. It sustains while the session only. (That is until you close the tab.)</li>
     </ul>
-    
+
     <h4>How to show popup</h4>
     <ol>
       <li> While browsing VRChat feedback board (that is Canny)</li>
