Fix broken link of previous commit

--- a/browser-extension/options.html
+++ b/browser-extension/options.html
@@ -11,7 +11,7 @@
   <div style="margin: 10px;">
     <div>
       <h2 style="display: inline-block;">VRChat feedback boards helper browser extension</h2>
-      <img src="/images/icon1_128.png" style="width:128px; height:128px; zoom: 25%;">
+      <img src="images/icon1_128.png" style="width:128px; height:128px; zoom: 25%;">
     </div>
 
     <h3>Options</h3>
