Add a link on popup to the board and add style of buttons
Add a anchor tag on the popup window to open VRChat Canny board when the tab is not browsing it.
Add styles of anchor and input button.

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -13,10 +13,10 @@
     <div id="notWorkNowMessage">
       <h3 class="thinMargin"> Not working on this tab now </h3>
 
-      <div style="padding-left: 10px;">
+      <div style="padding: 10px;">
         This extension works only on
         <ul style="list-style-type: none; padding-inline-start: 10px; margin: 2px;">
-          <li>https://feedback.vrchat.com/</li>
+          <li>https://feedback.vrchat.com/ <a href="https://feedback.vrchat.com/" class="buttonStyledAnchor" target="_blank">Open</a></li>
           <li>https://*.canny.io/</li>
         </ul>
       </div>
