add network usage option switch

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -27,6 +27,12 @@
       <ul class="simpleList" style="padding-left: 10px;">
         <li>
           <label>
+            <input type="checkbox" name="fetchActive">
+            Allow network usage to get post details
+          </label>
+        </li>
+        <li>
+          <label>
             <input type="checkbox" name="showAuthorName">
             Show author name of each post
           </label>
