Change UI style from browser_action to page_action

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -13,6 +13,8 @@
     <div id="notWorkNowMessage">
       <h3 class="thinMargin"> Not working on this tab now </h3>
 
+      Warning: If you see this message, something went wrong on this extension.
+
       <div style="padding: 10px;">
         This extension works only on
         <ul style="list-style-type: none; padding-inline-start: 10px; margin: 2px;">
