Improve UI design on Firefox

--- a/browser-extension/options.html
+++ b/browser-extension/options.html
@@ -25,9 +25,9 @@
       <li>Currently you can't save settings. It sustains while the session only. (That is until you close the tab.)</li>
     </ul>
 
-    <h4>How to show popup</h4>
+    <h4>Chrome: How to show popup</h4>
     <ol>
-      <li> While browsing VRChat feedback board (that is Canny)</li>
+      <li> While browsing Canny pages</li>
       <li> Click Chrome extensions button on toolbar.
         (Like a jigsaw puzzle piece icon on right upper of the window)</li>
       <li> Choose this extension</li>
@@ -35,6 +35,12 @@
       <li> Tips: You can pin the icon on the toolbar for a short cut</li>
     </ol>
 
+    <h4>Firefox: How to show popup</h4>
+    <ol>
+      <li> While browsing Canny pages,</li>
+      <li> Click the icon of this extension that is displayed inside the browser address bar.</li>
+      <li> Then a popup will appears.</li>
+    </ol>
 
     <div style="margin-top: 50px;">
       written by
