--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -18,7 +19,8 @@
       <div style="padding: 10px;">
         This extension works only on
         <ul style="list-style-type: none; padding-inline-start: 10px; margin: 2px;">
-          <li>https://feedback.vrchat.com/ <a href="https://feedback.vrchat.com/" class="buttonStyledAnchor" target="_blank">Open</a></li>
+          <li>https://feedback.vrchat.com/ <a href="https://feedback.vrchat.com/" class="buttonStyledAnchor"
+              target="_blank">Open</a></li>
           <li>https://*.canny.io/</li>
         </ul>
       </div>
@@ -83,6 +85,11 @@
             title="remove this field">
         </li>
       </ul>
+
+      <h3></h3>
+      <div>
+        <a href="options.html" class="buttonStyledAnchor" target="_blank">Help and Options</a>
+      </div>
 
     </div>
   </div>
