--- a/browser-extension/options.html
+++ b/browser-extension/options.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <title>Options | VRChat feedback boards helper browser extension</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +12,7 @@
   <div style="margin: 10px;">
     <div>
       <h2 style="display: inline-block;">VRChat feedback boards helper browser extension</h2>
-      <img src="images/icon1_128.png" style="width:128px; height:128px; zoom: 25%;">
+      <img src="images/icon1_48.png" style="width:48px; height:48px;">
     </div>
 
     <h3>Options</h3>
