Change name of the extension
As a result of developing, this extension has no dependency  on VRChat Canny board, at least on its core functionality. So we drop it from naming.

--- a/browser-extension/options.html
+++ b/browser-extension/options.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Options | VRChat feedback boards helper browser extension</title>
+  <title>Options | Canny extension for End-user</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -11,7 +11,7 @@
 
   <div style="margin: 10px;">
     <div>
-      <h2 style="display: inline-block;">VRChat feedback boards helper browser extension</h2>
+      <h2 style="display: inline-block;">Canny extension for End-user</h2>
       <img src="images/icon1_48.png" style="width:48px; height:48px;">
     </div>
 
@@ -28,32 +28,28 @@
 
     <h4>Chrome: How to show popup</h4>
     <ol>
-      <li> While browsing Canny pages</li>
+      <li> While browsing Canny pages,</li>
       <li> Click Chrome extensions button on toolbar.
         (Like a jigsaw puzzle piece icon on right upper of the window)</li>
       <li> Choose this extension</li>
-      <li> Then a popup will appears.</li>
+      <li> Then a popup window appears.</li>
       <li> Tips: You can pin the icon on the toolbar for a short cut</li>
     </ol>
 
     <h4>Firefox: How to show popup</h4>
     <ol>
       <li> While browsing Canny pages,</li>
-      <li> Click the icon of this extension that is displayed inside the browser address bar.</li>
-      <li> Then a popup will appears.</li>
+      <li> Click the icon of this extension that is displayed inside the browser address bar (right side of the bar).</li>
+      <li> Then a popup window appears.</li>
     </ol>
 
     <div style="margin-top: 50px;">
       written by
       <a href="https://twitter.com/naqtn" target="_blank">naqtn</a>
       , repo on <a href="https://github.com/naqtn/vrchat-feedback-boards-helper">GitHub</a>
-      , under the MIT License
+      , distributed under the MIT License
     </div>
 
-    <div id="testUI" style="display: none;">
-      <button id="testButton">test</button>
-      <textarea id="debugTextarea">debugTextarea</textarea>
-    </div>
   </div>
 
   <script src="options.js"></script>
