--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -9,7 +9,7 @@
 <body class="popupBody bodyCommon">
 
   <div style="margin: 10px;">
-    <div>VRChat Feedback Boards Helper Browser Extension</div>
+    <div>Canny extension for End-user</div>
 
     <div id="notWorkNowMessage">
       <h3 class="thinMargin"> Not working on this tab now </h3>
