Add a feature of stored default settings
We decided to use popup to edit default settings because it is the same of current session settings. So now, the option page uses the popup page as an iframe-ed window. And the popup handles both settings as in slightly different modes. The background script serves default settings.

--- a/browser-extension/options.html
+++ b/browser-extension/options.html
@@ -16,7 +16,9 @@
     </div>
 
     <h3>Options</h3>
-    <p>Nothing here yet.
+    <iframe id="popupIframe" src="popup.html" name="POPUP_IN_OPTIONS" width="400" height="300" scrolling="no"
+      style="border: solid 1px; overflow-y: hidden;">
+    </iframe>
 
     <h3 id="help">Help</h3>
     <h4>How to change settings</h4>
@@ -39,7 +41,8 @@
     <h4>Firefox: How to show popup</h4>
     <ol>
       <li> While browsing Canny pages,</li>
-      <li> Click the icon of this extension that is displayed inside the browser address bar (right side of the bar).</li>
+      <li> Click the icon of this extension that is displayed inside the browser address bar (right side of the bar).
+      </li>
       <li> Then a popup window appears.</li>
     </ol>
 
