use API to open option page instead of anchor tag

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -95,7 +95,7 @@
     <div>
       <input id="storeAsDefaultsButton" type="button" value="Store as Defaults">
       <input id="reloadFromDefaultsButton" type="button" value="Reload from Defaults">
-      <a href="options.html" class="buttonStyledAnchor" target="_blank">Help and Options</a>
+      <input id="openOptionsPageButton"  type="button" value="Help and Options">
     </div>
 
   </div>
