--- a/browser-extension/options.html
+++ b/browser-extension/options.html
@@ -20,37 +20,22 @@
       style="border: solid 1px; overflow-y: hidden;">
     </iframe>
 
-    <h3 id="help">Help</h3>
-    <h4>How to change settings</h4>
-    <ul>
-      <li>Show popup and configure (Same manner as other extensions. See below for details)</li>
-      <li>Settings will be applied immediately on browsing page.</li>
-      <li>Currently you can't save settings. It sustains while the session only. (That is until you close the tab.)</li>
-    </ul>
-
-    <h4>Chrome: How to show popup</h4>
-    <ol>
-      <li> While browsing Canny pages,</li>
-      <li> Click Chrome extensions button on toolbar.
-        (Like a jigsaw puzzle piece icon on right upper of the window)</li>
-      <li> Choose this extension</li>
-      <li> Then a popup window appears.</li>
-      <li> Tips: You can pin the icon on the toolbar for a short cut</li>
-    </ol>
-
-    <h4>Firefox: How to show popup</h4>
-    <ol>
-      <li> While browsing Canny pages,</li>
-      <li> Click the icon of this extension that is displayed inside the browser address bar (right side of the bar).
-      </li>
-      <li> Then a popup window appears.</li>
-    </ol>
-
-    <div style="margin-top: 50px;">
-      written by
-      <a href="https://twitter.com/naqtn" target="_blank">naqtn</a>
-      , repo on <a href="https://github.com/naqtn/vrchat-feedback-boards-helper">GitHub</a>
-      , distributed under the MIT License
+    <h3 class="thinMargin">Info</h3>
+    <div>
+      <ul class="thinMargin">
+        <li>
+          <a
+            href="https://github.com/naqtn/vrchat-feedback-boards-helper/tree/main/browser-extension#readme">Document</a>
+        </li>
+        <li>Support page: <a href="https://github.com/naqtn/vrchat-feedback-boards-helper/issues">on GitHub issues</a>
+        </li>
+        <li>Source code: <a
+            href="https://github.com/naqtn/vrchat-feedback-boards-helper/tree/main/browser-extension">Hosted on
+            GitHub</a>
+        </li>
+        <li>Written by: <a href="https://twitter.com/naqtn" target="_blank">naqtn</a></li>
+        <li>Distributed under the MIT License.</li>
+      </ul>
     </div>
 
   </div>
