--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -66,7 +66,7 @@
       </ul>
 
       <h4 class="thinMargin">Visibility Filter</h4>
-      <select name="visibilityFilter">
+      <select name="visibilityFilter" style="margin-left: 20px;">
         <option value="SHOW_ALL">Show all posts</option>
         <option value="ONLY_MINE">Only posts that I wrote</option>
         <option value="ONLY_SPECIFIED_AUTHORS_BY_NAME">Only posts by specified authors</option>
